made board min width on mobile sizes to avoid breaking board

--- a/src/components/gameboard/gameboard.scss
+++ b/src/components/gameboard/gameboard.scss
@@ -10,6 +10,7 @@
 
   @media screen and (max-width: 640px) {
     max-width: 400px;
+    min-width: 400px;
   }
 
   .square {
