--- a/src/components/knight/knight-style.scss
+++ b/src/components/knight/knight-style.scss
@@ -2,4 +2,9 @@
   width: 50px;
   height: 50px;
   pointer-events: none;
+
+  @media screen and (max-width: 640px) {
+    width: 40px;
+    height: 40px;
+  }
 }
